--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         ws.close();
       }
 
-      ws = new WebSocket('ws://localhost:6969');
+      ws = new WebSocket('ws://134.122.29.11:6969');
+
       ws.onopen = () => {
         console.log('Connection opened!');
       }
